<?xml version="1.0"?>
<package format="3">
  <name>tensorrt_ros</name>
  <version>1.22.0</version>
  <description>Wrapper around the tensorrt library to include it in a catkin workspace</description>

  <maintainer email="iasonth95@gmail.com">Iason Theodorou</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
